hotfix in swagger
